wip cp/paste bug on mobile

--- a/app/_ui/src/App.css
+++ b/app/_ui/src/App.css
@@ -1,9 +1,6 @@
-/* ########## */
-/*   custom   */
-/* ########## */
-
 :root {
-		--header-height: 70px;
+		--header-height: 40px;
+		--color-grey: #f1f1f1;
 }
 
 html, body {
@@ -18,7 +15,39 @@ html, body {
 
 #header {
 		height: var(--header-height);
-		background: orange;
+		background: var(--color-grey);
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+}
+
+#header-logo {
+		height: 30px;
+		width: 30px;
+		padding: 0px 12px;
+}
+#header-logo > img {
+		height: inherit;
+		width: inherit;
+}
+.header-block {
+		display: flex;
+		align-items: center;
+}
+#header-title {
+		font-weight: bold;
+		font-family: 'REM', sans-serif;
+}
+.search {
+		border: none;
+}
+.search-wrapper {
+		background: #fff;
+		border-radius: 10px;
+		height: 29px;
+		margin: 0 6px;
+		padding: 2px 0px 2px 10px;
+		width: 200px;
 }
 
 #main {
@@ -41,47 +70,4 @@ html, body {
 
 .list {
 		display: inline-block;
-}
-
-/* ########### */
-/*   default   */
-/* ########### */
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
