--- a/app/_ui/src/components/EventRow.css
+++ b/app/_ui/src/components/EventRow.css
@@ -3,6 +3,16 @@
 		--action-color: #99e9f2;
 }
 
+/* big hack */
+.hidden {
+		position: fixed;
+		border: 0;
+		height: 1px;
+		width: 1px;
+		bottom: 0;
+		right: 0;
+}
+
 .event {
 		height: 54px;
 		padding: 3px 5px 3px 5px;
